# aws-signing-request-example

./: Cargo.toml
src/: main.rs
