[package]
name = "aws-signing-request-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-signing-request = { git = "https://git@github.com/glistman/aws-signing-request.git", tag = "v0.0.1" }
reqwest = "0.11.6"
tokio = { version = "1.12.0", features = ["full"] }
chrono = "0.4.19"